--- a/README
+++ b/README
@@ -1,3 +1,7 @@
-this is my coding area included simple files
 
-items included:
+这是在平时学习Linux环境编程中写的C程序。
+
+1.《Unix高级环境编程》
+2.《The Linux Programming interface》
+3.《深入理解计算机系统结构》
+
